--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,13 @@ workflow:
 # Lint
 # ---------------------------------------------------------------------------
 
+.lint-default: &lint-default
+  stage: lint
+  needs: []
+  image: python:3.8
+  tags:
+    - docker
+
 Lint REUSE compliance:
   extends: .lint-default
   image:
