--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,11 +25,11 @@ include:
   - project: 'labs/salt-automation'
     file: "/gitlab-ci-templates/python/pypi.v1.yml"
 
-workflow:
-  rules:
-    - if: $CI_COMMIT_TAG
-    - if: $CI_COMMIT_BRANCH == "master"
-    - if: $CI_MERGE_REQUEST_ID
+#workflow:
+#  rules:
+#    - if: $CI_COMMIT_TAG
+#    - if: $CI_COMMIT_BRANCH == "master"
+#    - if: $CI_MERGE_REQUEST_ID
 
 
 # ---------------------------------------------------------------------------
