--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 Magenta ApS
+#
+# SPDX-License-Identifier: MPL-2.0
+
 # ---------------------------------------------------------------------------
 # Global
 # ---------------------------------------------------------------------------
