--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 Magenta ApS
+#
+# SPDX-License-Identifier: MPL-2.0
+
 repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.5.1
