--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 Magenta ApS
+#
+# SPDX-License-Identifier: MPL-2.0
+
 [tool.poetry]
 name = "mo-ldap-import-export"
 version = "0.1.0"
