--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,14 +64,17 @@ Lint Python:
 # Test
 # ---------------------------------------------------------------------------
 Test:
+  stage: test
   extends: .pytest
   variables:
     PYTEST_EXTRA_FLAGS: -m unittest
 
 Export coverage:
+  stage: test
   extends: .export_coverage
   needs: [Test]
 
 Check coverage:
+  stage: test
   extends: .check_coverage
   needs: [Test]
