--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,8 +47,14 @@ Lint REUSE compliance:
 Lint Python:
   stage: lint
   extends: .lint-python
+  before_script:
+    - pip3 install flake8
+    - pip3 install black
   script:
     - poetry run pre-commit run --all-files
+    - flake8 --extend-ignore E501,E226,E203 mo_ldap_import_export/
+    - black --check --diff mo_ldap_import_export/
+
 
 # ---------------------------------------------------------------------------
 # Test
