--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,8 @@
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
   PRE_COMMIT_HOME: "$CI_PROJECT_DIR/.cache/pre-commit"
+  PYTEST_COV_MODULE: mo_ldap_import_export
+  PYTEST_COV_FAIL_UNDER: 100
 
 stages:
   - lint
