--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,14 +18,15 @@ stages:
 
 include:
   - project: labs/salt-automation
-    file: gitlab-ci-templates/common/autopub.v1.yml
+    file: /gitlab-ci-templates/common/autopub.v1.yml
+  - project: rammearkitektur/gitlab-ci-templates
+    file: templates/poetry-precommit.yml
+  - project: labs/salt-automation
+    file: gitlab-ci-templates/python/pytest-meta.v1.yml
   - project: labs/salt-automation
     file: gitlab-ci-templates/common/docker-release.v1.yml
   - project: labs/salt-automation
     file: gitlab-ci-templates/common/config-updater-meta.v1.yml
-  - project: rammearkitektur/gitlab-ci-templates
-    file: templates/poetry-precommit.yml
-
 
 
 #workflow:
