--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ black = "^22.3.0"
 pytest = "^7.1.1"
 pytest-cov = "^4.0.0"
 pre-commit = "^2.18.1"
+flake8 = "^4.0.1"
 mypy = "^0.961"
+reorder-python-imports = "^2.6.0"
 types-python-dateutil = "^2.8.10"
 
 [build-system]
