--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pika = "^1.3.0"
 python-dateutil = "^2.8.2"
 pydantic = "^1.9.0"
 pytest-cov = "^4.0.0"
+pre-commit = "^2.20.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
