--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,8 @@ include:
     file: gitlab-ci-templates/common/docker-release.v1.yml
   - project: labs/salt-automation
     file: gitlab-ci-templates/common/config-updater-meta.v1.yml
+  - project: 'labs/salt-automation'
+  file: "/gitlab-ci-templates/common/pre-commit.v1.yml"
 
 
 #workflow:
