--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ stages:
 include:
   - project: labs/salt-automation
     file: /gitlab-ci-templates/common/autopub.v1.yml
-  - project: rammearkitektur/gitlab-ci-templates
+  - project: labs/salt-automation
     file: gitlab-ci-templates/python/pytest-meta.v1.yml
   - project: labs/salt-automation
     file: gitlab-ci-templates/common/docker-release.v1.yml
