--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,16 +17,27 @@ stages:
   - deploy
 
 include:
+  # See https://git.magenta.dk/labs/salt-automation/-/tree/master/gitlab-ci-templates/common
   - project: labs/salt-automation
     file: /gitlab-ci-templates/common/autopub.v1.yml
   - project: labs/salt-automation
-    file: gitlab-ci-templates/python/pytest-meta.v1.yml
+    file: /gitlab-ci-templates/python/pytest-meta.v1.yml
   - project: labs/salt-automation
-    file: gitlab-ci-templates/common/docker-release.v1.yml
+    file: /gitlab-ci-templates/common/docker-release.v1.yml
   - project: labs/salt-automation
-    file: gitlab-ci-templates/common/config-updater-meta.v1.yml
-  - project: 'labs/salt-automation'
-    file: "/gitlab-ci-templates/common/pre-commit.v1.yml"
+    file: /gitlab-ci-templates/common/config-updater-meta.v1.yml
+
+    # Runs linting
+  - project: labs/salt-automation
+    ref: master
+    file: /gitlab-ci-templates/common/pre-commit.v1.yml
+
+    # Runs testing
+  - project: labs/salt-automation
+    ref: master
+    file: /gitlab-ci-templates/python/pytest.v1.yml
+
+
 
 
 #workflow:
@@ -44,15 +55,6 @@ Lint REUSE compliance:
     entrypoint: [""]
   script:
     - reuse lint
-
-Lint Python:
-  stage: lint
-  before_script:
-    - pip3 install poetry flake8 black
-  script:
-    - poetry run pre-commit run --all-files
-    - flake8 --extend-ignore E501,E226,E203 mo_ldap_import_export/
-    - black --check --diff mo_ldap_import_export/
 
 
 # ---------------------------------------------------------------------------
