--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,22 +6,28 @@ authors = ["Magenta ApS <info@magenta.dk>"]
 license = "MPL-2.0"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pika = "^1.3.0"
-python-dateutil = "^2.8.2"
+python = "^3.9"
+structlog = "^22.1.0"
+ramqp = "^6.7.0"
 pydantic = "^1.9.0"
-pytest-cov = "^4.0.0"
-pre-commit = "^2.20.0"
+raclients = "1.3.4"
+gql = "^3.2.0"
+more-itertools = "^8.13.0"
+ra-utils = "^1.0.0"
+uvicorn = {extras = ["standard"], version = "^0.17.6"}
+prometheus-fastapi-instrumentator = "^5.8.1"
+fastapi = "^0.85.0"
+pytest-asyncio = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.2"
 black = "^22.3.0"
-pytest = "^7.1.1"
-pytest-cov = "^4.0.0"
-pre-commit = "^2.18.1"
-flake8 = "^4.0.1"
-mypy = "^0.961"
-reorder-python-imports = "^2.6.0"
-types-python-dateutil = "^2.8.10"
+reorder-python-imports = "^3.1.0"
+mypy = "^0.950"
+pre-commit = "^2.19.0"
+pylint-pydantic = "^0.1.4"
+requests = "^2.28.0"
+asgi-lifespan = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -30,3 +36,20 @@ build-backend = "poetry.core.masonry.api"
 [tool.autopub]
 git-username = "MagentaBot"
 git-email = "info@magenta.dk"
+
+[tool.pytest.ini_options]
+asyncio_mode="auto"
+
+[tool.mypy]
+python_version = "3.9"
+warn_return_any = "True"
+warn_unused_configs = "True"
+check_untyped_defs = "True"
+disallow_untyped_defs = "True"
+plugins = "pydantic.mypy"
+
+[tool.flake8]
+max-line-length = 88
+exclude = [
+    ".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".venv", ".gitlab"
+]
