--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,6 @@ include:
     file: /gitlab-ci-templates/python/pytest.v1.yml
 
 
-#workflow:
-#  rules:
-#    - if: $CI_COMMIT_BRANCH
+workflow:
+  rules:
+    - if: $CI_COMMIT_BRANCH
