--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       amqp_url: "amqp://guest:guest@msg_broker"
 
       LDAP_CONTROLLERS: '[{"host": "100.110.188.107"}]'
-      LDAP_DOMAIN: "LDAP"
+      LDAP_DOMAIN: "AD"
       LDAP_USER: ""
       LDAP_PASSWORD: ""
       LDAP_SEARCH_BASE: "DC=ad,DC=addev"
