[#54380] Added admin password to docs. login credentials are admin:admin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ ra-utils = "^1.0.0"
 uvicorn = {extras = ["standard"], version = "^0.17.6"}
 prometheus-fastapi-instrumentator = "^5.8.1"
 fastapi = "^0.85.0"
+fastapi-login = "^1.8.3" 
 pytest-asyncio = "^0.19.0"
 pytest-cov = "^4.0.0"
 pytest-split = "^0.8.0"
