--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -15,3 +15,6 @@ CLIENT_ID= "dipex"
 CLIENT_SECRET= "603f1c82-d012-4d04-9382-dbe659c533fb"
 
 LISTEN_TO_CHANGES_IN_MO = True
+
+ADMIN_PASSWORD = "admin"
+AUTHENTICATION_SECRET = "super-secret-key"
