--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,23 +50,24 @@ include:
   - project: labs/salt-automation
     file: /gitlab-ci-templates/common/docker-release.v1.yml
 
-# Kører config-updater for test
+# Kører config-updater for dev. Kører på semantiske versioner
 Deploy to Dev:
   extends: .release-to-dev
+  needs: ["Build"]
   variables:
     ENDPOINT: os2mo/salt/ldapimportexport/update-dev
 
-# Kører config-updater for test
+# Kører config-updater for test. Kører kun scheduleret
 Deploy to Test:
   extends: .release-to-test
-  needs: []
+  needs: ["Build"]
   variables:
     ENDPOINT: os2mo/salt/ldapimportexport/update-test
 
-# Kører config-updater for prod
+# Kører config-updater for prod. Kører kun scheduleret
 Deploy to Prod:
   extends: .release-to-prod
-  needs: []
+  needs: ["Build"]
   variables:
     ENDPOINT: os2mo/salt/ldapimportexport/update-prod
 
