--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -18,3 +18,6 @@ LISTEN_TO_CHANGES_IN_MO = True
 
 ADMIN_PASSWORD = "admin"
 AUTHENTICATION_SECRET = "super-secret-key"
+
+DEFAULT_ORG_UNIT_TYPE = "Afdeling"
+DEFAULT_ORG_UNIT_LEVEL = "N1"
