--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ ldap3 = "^2.9.1"
 strawberry-graphql = "^0.116.4"
 pycryptodome = "^3.9.8"
 pandas = "^1.5.1"
+Pillow = "^9.0.1"
+matplotlib = "^3.5.1"
+networkx = "^3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
