[#53126] Added listen_to_changes_in_ldap flag

--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -14,6 +14,7 @@ CLIENT_ID= "dipex"
 CLIENT_SECRET= "603f1c82-d012-4d04-9382-dbe659c533fb"
 
 LISTEN_TO_CHANGES_IN_MO = True
+LISTEN_TO_CHANGES_IN_LDAP = True
 
 ADMIN_PASSWORD = "admin"
 AUTHENTICATION_SECRET = "super-secret-key"
