--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ pandas = "^1.5.1"
 Pillow = "^9.0.1"
 matplotlib = "^3.5.1"
 networkx = "^3.0"
+panel = "^0.14.4"
+bokeh = "^2.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
