feat: [#55956] added flag to check for SD-numbers starting with 9

--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -23,3 +23,4 @@ DEFAULT_ORG_UNIT_TYPE = "Afdeling"
 DEFAULT_ORG_UNIT_LEVEL = "N1"
 
 ORG_UNIT_PATH_STRING_SEPARATOR = "\\"
+CHECK_ALLEROED_SD_NUMBER = True
