feat: [#56072] added possibility to only scan for changes in a particular OU

--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -5,6 +5,7 @@ LDAP_DOMAIN="AD"
 LDAP_USER=""
 LDAP_PASSWORD=""
 LDAP_SEARCH_BASE="DC=ad,DC=addev"
+LDAP_OU_TO_SCAN_FOR_CHANGES="OU=OS2MO"
 
 AMQP_URL= "amqp://guest:guest@msg_broker"
 AUTH_SERVER= "http://keycloak:8080/auth"
