fix: [#56138] added startup check

--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -6,7 +6,7 @@ LDAP_USER=""
 LDAP_PASSWORD=""
 LDAP_SEARCH_BASE="DC=ad,DC=addev"
 LDAP_OUS_TO_SEARCH_IN=["OU=OS2MO", "OU=Aller\u00f8d Kommune"]
-LDAP_OUS_TO_WRITE_TO=["OU=Kapel,OU=demo,OU=OS2MO"]
+LDAP_OUS_TO_WRITE_TO=["OU=demo,OU=OS2MO"]
 LDAP_OU_FOR_NEW_USERS="OU=demo,OU=OS2MO"
 
 AMQP_URL= "amqp://guest:guest@msg_broker"
