--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -12,6 +12,7 @@ LDAP_OU_FOR_NEW_USERS="OU=demo,OU=OS2MO"
 AMQP__URL= "amqp://guest:guest@msg_broker"
 AUTH_SERVER= "http://keycloak:8080/auth"
 MO_URL= "http://mo"
+MO_GRAPHQL_VERSION="7"
 
 CLIENT_ID= "dipex"
 CLIENT_SECRET= "603f1c82-d012-4d04-9382-dbe659c533fb"
