--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ pycryptodome = "^3.9.8"
 pandas = "^1.5.1"
 pyyaml = "^6.0.1"
 fastapi-utils = "^0.2.1"
+xlsxwriter = "^3.1.9"
+openpyxl = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
