--- a/mo_ldap_import_export/mappings/groenland.yaml
+++ b/mo_ldap_import_export/mappings/groenland.yaml
@@ -20,7 +20,7 @@ ldap_to_mo:
   ADGUID:
     objectClass: ramodels.mo.details.it_system.ITUser
     _import_to_mo_: "true"
-    user_key: '{{ ldap.objectGUID|remove_curly_brackets }}'
+    user_key: '{{ ldap.entryUUID|remove_curly_brackets }}'
     itsystem: '{{ dict(uuid=get_it_system_uuid(''ADGUID'')) }}'
     validity: '{{ dict(from_date=now()|mo_datestring) }}'
     person: '{{ dict(uuid=employee_uuid or NONE) }}'
@@ -73,7 +73,7 @@ mo_to_ldap:
   ADGUID:
     objectClass: user
     _export_to_ldap_: "true"
-    objectGUID: '{{ ''{'' + mo_employee_it_user.user_key + ''}'' }}'
+    entryUUID: '{{ ''{'' + mo_employee_it_user.user_key + ''}'' }}'
   ADSAMA:
     objectClass: user
     _export_to_ldap_: "true"
