feat(config)!: [#59345] remove mapping file support
This commit makes the `CONVERSION_MAPPING` environmental variable
required, as it is now the only way to configure the mapping between
OS2mo and LDAP in the integration.

The goal of the change is to follow the 12-factor recommendation for
configuration and to avoid having to release new versions of the LDAP
integration simply to change customer configurations.

BREAKING CHANGE:

It used to be possible to mount configuration files to the mapping
folder and refer to them using the `CONVERSION_MAP` environmental
variable, however this is no longer possible.

If you need this behavior, simply convert your mapping file using `yq`:
```
$ yq -o=json configuration.yaml
```
And provide it in the `CONVERSION_MAPPING` environmental variable
instead. NOTE: You may have to escape single quotes in the configuration.

--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -1,6 +1,3 @@
-# Produced using: yq -I0 -o=json kolding_fixture.yaml
-CONVERSION_MAPPING='{"init":{"it_systems":{"ADUUID":"Active Directory UUID","ADtitle":"Active Directory Title"}},"ldap_to_mo":{"Employee":{"objectClass":"ramodels.mo.employee.Employee","_import_to_mo_":"false","cpr_no":"{{ ldap.employeeNumber|strip_non_digits or NONE }}","uuid":"{{ employee_uuid or NONE }}"},"ADtitle":{"objectClass":"ramodels.mo.details.it_system.ITUser","_import_to_mo_":"true","user_key":"{{ ldap.title }}","itsystem":"{{ dict(uuid=get_it_system_uuid('ADtitle')) }}","validity":"{{ dict(from_date=now()|mo_datestring) }}","person":"{{ dict(uuid=employee_uuid or NONE) }}"},"ADUUID":{"objectClass":"ramodels.mo.details.it_system.ITUser","_import_to_mo_":"true","user_key":"{{ ldap.entryUUID }}","itsystem":"{{ dict(uuid=get_it_system_uuid('ADUUID')) }}","validity":"{{ dict(from_date=now()|mo_datestring) }}","person":"{{ dict(uuid=employee_uuid or NONE) }}"}},"mo_to_ldap":{"Employee":{"objectClass":"inetOrgPerson","_export_to_ldap_":"false","employeeNumber":"{{ mo_employee.cpr_no }}"},"ADtitle":{"objectClass":"inetOrgPerson","_export_to_ldap_":"false","title":"{{ mo_employee_it_user.user_key }}","employeeNumber":"{{ mo_employee.cpr_no }}"},"ADUUID":{"objectClass":"inetOrgPerson","_export_to_ldap_":"false","entryUUID":"{{ mo_employee_it_user.user_key }}","employeeNumber":"{{ mo_employee.cpr_no }}"}},"username_generator":{"objectClass":"UserNameGenerator"}}'
-
 LDAP_CONTROLLERS='[{"host": "ldap"}]'
 LDAP_DOMAIN="magenta.dk"
 LDAP_USER="cn=admin,dc=magenta,dc=dk"
@@ -25,3 +22,62 @@ LISTEN_TO_CHANGES_IN_LDAP=True
 
 DEFAULT_ORG_UNIT_TYPE="Afdeling"
 DEFAULT_ORG_UNIT_LEVEL="N1"
+
+# Produced using: yq -o=json kolding_fixture.yaml
+# Followed by escaping the single quotes within templates
+CONVERSION_MAPPING='
+{
+  "init": {
+    "it_systems": {
+      "ADUUID": "Active Directory UUID",
+      "ADtitle": "Active Directory Title"
+    }
+  },
+  "ldap_to_mo": {
+    "Employee": {
+      "objectClass": "ramodels.mo.employee.Employee",
+      "_import_to_mo_": "false",
+      "cpr_no": "{{ ldap.employeeNumber|strip_non_digits or NONE }}",
+      "uuid": "{{ employee_uuid or NONE }}"
+    },
+    "ADtitle": {
+      "objectClass": "ramodels.mo.details.it_system.ITUser",
+      "_import_to_mo_": "true",
+      "user_key": "{{ ldap.title }}",
+      "itsystem": "{{ dict(uuid=get_it_system_uuid(\'ADtitle\')) }}",
+      "validity": "{{ dict(from_date=now()|mo_datestring) }}",
+      "person": "{{ dict(uuid=employee_uuid or NONE) }}"
+    },
+    "ADUUID": {
+      "objectClass": "ramodels.mo.details.it_system.ITUser",
+      "_import_to_mo_": "true",
+      "user_key": "{{ ldap.entryUUID }}",
+      "itsystem": "{{ dict(uuid=get_it_system_uuid(\'ADUUID\')) }}",
+      "validity": "{{ dict(from_date=now()|mo_datestring) }}",
+      "person": "{{ dict(uuid=employee_uuid or NONE) }}"
+    }
+  },
+  "mo_to_ldap": {
+    "Employee": {
+      "objectClass": "inetOrgPerson",
+      "_export_to_ldap_": "false",
+      "employeeNumber": "{{ mo_employee.cpr_no }}"
+    },
+    "ADtitle": {
+      "objectClass": "inetOrgPerson",
+      "_export_to_ldap_": "false",
+      "title": "{{ mo_employee_it_user.user_key }}",
+      "employeeNumber": "{{ mo_employee.cpr_no }}"
+    },
+    "ADUUID": {
+      "objectClass": "inetOrgPerson",
+      "_export_to_ldap_": "false",
+      "entryUUID": "{{ mo_employee_it_user.user_key }}",
+      "employeeNumber": "{{ mo_employee.cpr_no }}"
+    }
+  },
+  "username_generator": {
+    "objectClass": "UserNameGenerator"
+  }
+}
+'
