--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,6 @@ ldap3 = "^2.9.1"
 strawberry-graphql = "^0.116.4"
 pycryptodome = "^3.9.8"
 pandas = "^1.5.1"
-pyyaml = "^6.0.1"
 fastapi-utils = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
@@ -38,6 +37,9 @@ pre-commit = "^2.19.0"
 pylint-pydantic = "^0.1.4"
 requests = "^2.28.0"
 asgi-lifespan = "^1.0.1"
+
+[tool.poetry.group.dev.dependencies]
+mergedeep = "^1.3.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
