feat: [#59347] add support for giving settings via a dotenv file.
This is required to configure our forbidden username lists for
deployment, as the lists are too large for normal environmental
variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,9 @@ services:
     container_name: mo_ldap_ie
     build: .
     command: ["uvicorn", "--factory", "app.main:create_app", "--host", "0.0.0.0", "--reload"]
-    env_file:
-      ./dev-environment/mo_ldap_import_export.env
     volumes:
       - ./mo_ldap_import_export:/opt/app/
+      - ./dev-environment/mo_ldap_import_export.env:/var/run/.env
     networks:
       - os2mo_default
     ports:
