--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ strawberry-graphql = "^0.116.4"
 pycryptodome = "^3.9.8"
 pandas = "^1.5.1"
 fastapi-utils = "^0.2.1"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
