dev: [#59347] fully qualify development settings
This should make a future transition to proper settings easier, when
FastRAMQPI eventually change out `BaseSettings` for `BaseModel` in its
settings classes.

--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -11,11 +11,11 @@ LDAP_AUTH_METHOD="simple"
 
 FASTRAMQPI__AMQP__URL="amqp://guest:guest@msg-broker"
 INTERNAL_AMQP__URL="amqp://guest:guest@msg-broker"
-AUTH_SERVER="http://keycloak:8080/auth"
-MO_URL="http://mo:5000"
+FASTRAMQPI__AUTH_SERVER="http://keycloak:8080/auth"
+FASTRAMQPI__MO_URL="http://mo:5000"
 
-CLIENT_ID="dipex"
-CLIENT_SECRET="603f1c82-d012-4d04-9382-dbe659c533fb"
+FASTRAMQPI__CLIENT_ID="dipex"
+FASTRAMQPI__CLIENT_SECRET="603f1c82-d012-4d04-9382-dbe659c533fb"
 
 LISTEN_TO_CHANGES_IN_MO=True
 LISTEN_TO_CHANGES_IN_LDAP=True
