--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,16 @@ structlog = "^23.1.0"
 ramqp = "^9.0.0"
 fastramqpi = "^1.5.4"
 pydantic = "^1.9.0"
-raclients = "3.3.2"
-gql = "^3.2.0"
+raclients = "^3.3.2"
+gql = "^3.5.0"
 more-itertools = "^9.1.0"
-ra-utils = "^1.0.0"
-uvicorn = {extras = ["standard"], version = "^0.17.6"}
+ra-utils = "^1.14.0"
+uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
 prometheus-fastapi-instrumentator = "^5.8.1"
 fastapi = "^0.95.0"
 ldap3 = "^2.9.1"
-strawberry-graphql = "^0.116.4"
-pandas = "^1.5.1"
+strawberry-graphql = "^0.219.1"
+pandas = "^2.2.0"
 fastapi-utils = "^0.2.1"
 python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
