--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
 # pycryptodome is needed due to https://github.com/cannatag/ldap3/issues/1051
 pycryptodome = "^3.20.0"
+sqlalchemy = {version = "^1", extras = ["psycopg2"]}
+alembic = "^1.13.1"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.pre-commit.dependencies]
 black = "^24.1.1"
