feat: move db settings into common settings

--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -1,3 +1,5 @@
+ENVIRONMENT=development
+DB__PASSWORD=secret
 LDAP_CONTROLLERS='[{"host": "ldap"}]'
 LDAP_DOMAIN="magenta.dk"
 LDAP_USER="cn=admin,dc=magenta,dc=dk"
