--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,14 @@ services:
     ports:
       - "8000:8000"
 
+  redis:
+    image: redis:6.2-alpine
+    restart: always
+    networks:
+      - os2mo_default
+    volumes: 
+      - redisdata
+
 networks:
   os2mo_default:
     external: true
