--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
 # pycryptodome is needed due to https://github.com/cannatag/ldap3/issues/1051
 pycryptodome = "^3.20.0"
+redis = "^5.0.1"
 
 [tool.poetry.group.pre-commit.dependencies]
 black = "^24.1.1"
