--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,13 @@ license = "MPL-2.0"
 python = "^3.10"
 structlog = "^23.1.0"
 ramqp = "^9.0.0"
-fastramqpi = "5.0.0"
+fastramqpi = "^5.2.0"
 pydantic = "^1.9.0"
 raclients = "^3.3.2"
 gql = "^3.5.0"
 more-itertools = "^9.1.0"
 ra-utils = "^1.14.0"
-uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
+uvicorn = "^0.27.1"
 prometheus-fastapi-instrumentator = "^5.8.1"
 fastapi = ">=0.101"
 ldap3 = "^2.9.1"
@@ -23,7 +23,6 @@ strawberry-graphql = "^0.219.1"
 pandas = "^2.2.0"
 fastapi-utils = "^0.2.1"
 python-dotenv = "^1.0.1"
-httpx = "^0.26.0"
 # pycryptodome is needed due to https://github.com/cannatag/ldap3/issues/1051
 pycryptodome = "^3.20.0"
 
