--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,10 @@ pytest-cov = "^4.1.0"
 pytest-split = "^0.8.2"
 pytest-xdist = "^3.5.0"
 
+
+[tool.poetry.group.dev.dependencies]
+debugpy = "^1.8.1"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
