--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -32,8 +32,7 @@ CONVERSION_MAPPING='
 {
   "init": {
     "it_systems": {
-      "ADUUID": "Active Directory UUID",
-      "ADtitle": "Active Directory Title"
+      "Active Directory": "Active Directory"
     }
   },
   "ldap_to_mo": {
@@ -48,20 +47,25 @@ CONVERSION_MAPPING='
       "nickname_surname": "{{ get_employee_dict(employee_uuid).nickname_surname }}",
       "user_key": "{{ ldap.title }}"
     },
-    "ADtitle": {
-      "objectClass": "ramodels.mo.details.it_system.ITUser",
+    "Engagement": {
+      "objectClass": "ramodels.mo.details.engagement.Engagement",
       "_import_to_mo_": "true",
-      "user_key": "{{ ldap.title }}",
-      "itsystem": "{{ dict(uuid=get_it_system_uuid(\'ADtitle\')) }}",
       "validity": "{{ dict(from_date=now()|mo_datestring) }}",
-      "person": "{{ dict(uuid=employee_uuid or NONE) }}"
+      "person": "{{ dict(uuid=employee_uuid or NONE) }}",
+      "user_key": "{{ get_primary_engagement_dict(employee_uuid).user_key }}",
+      "engagement_type": "{{ dict(uuid=get_primary_engagement_dict(employee_uuid).engagement_type_uuid) }}",
+      "org_unit": "{{ dict(uuid=get_primary_engagement_dict(employee_uuid).org_unit_uuid) }}",
+      "job_function": "{{ dict(uuid=get_primary_engagement_dict(employee_uuid).job_function_uuid) }}",
+      "primary": "{{ dict(uuid=get_primary_engagement_dict(employee_uuid).primary_uuid) }}",
+      "uuid": "{{ get_primary_engagement_dict(employee_uuid).uuid }}",
+      "extension_2": "{{ ldap.title }}"
     },
-    "ADUUID": {
+    "Active Directory": {
       "objectClass": "ramodels.mo.details.it_system.ITUser",
       "_import_to_mo_": "true",
-      "_terminate_": "{{ now()|mo_datestring if ldap.title == \"WOW\" else NONE }}",
-      "user_key": "{{ ldap.entryUUID }}",
-      "itsystem": "{{ dict(uuid=get_it_system_uuid(\'ADUUID\')) }}",
+      "uuid": "{{ ldap.entryUUID|remove_curly_brackets }}",
+      "user_key": "{{ ldap.uid }}",
+      "itsystem": "{{ dict(uuid=get_it_system_uuid(\'Active Directory\')) }}",
       "validity": "{{ dict(from_date=now()|mo_datestring) }}",
       "person": "{{ dict(uuid=employee_uuid or NONE) }}"
     }
@@ -78,19 +82,11 @@ CONVERSION_MAPPING='
       "_export_to_ldap_": "true",
       "title": "{{ mo_employee_engagement.user_key }}"
     },
-    "ADtitle": {
+    "Active Directory": {
       "objectClass": "inetOrgPerson",
       "_export_to_ldap_": "true",
-      "title": "{{ mo_employee_it_user.user_key }}",
-      "employeeNumber": "{{ mo_employee.cpr_no }}"
-    },
-    "ADUUID": {
-      "objectClass": "inetOrgPerson",
-      "_export_to_ldap_": "false",
-      "title": "{{ NONE }}",
-      "entryUUID": "{{ mo_employee_it_user.user_key }}",
-      "employeeNumber": "{{ mo_employee.cpr_no }}"
-    }
+      "entryUUID": "{{ mo_employee_it_user.uuid  }}",
+      "uid": "{{ mo_employee_it_user.user_key }}"    }
   },
   "username_generator": {
     "objectClass": "UserNameGenerator",
