--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,21 +13,20 @@ structlog = "^23.1.0"
 ramqp = "^9.0.0"
 fastramqpi = "5.3.1"
 pydantic = "^1.9.0"
-raclients = "3.3.5"
 gql = "^3.5.0"
 more-itertools = "^9.1.0"
-ra-utils = "^1.14.0"
 uvicorn = "^0.28.0"
-prometheus-fastapi-instrumentator = "^5.8.1"
 fastapi = ">=0.101"
 ldap3 = "^2.9.1"
-strawberry-graphql = "^0.220.0"
 pandas = "^2.2.1"
 fastapi-utils = "^0.2.1"
 python-dotenv = "^1.0.1"
 httpx = "^0.27.0"
 # pycryptodome is needed due to https://github.com/cannatag/ldap3/issues/1051
 pycryptodome = "^3.20.0"
+jinja2 = "^3.1.3"
+ramodels = ">=18.5.2,<23.0.0"
+tqdm = "^4.66.2"
 
 [tool.poetry.group.pre-commit.dependencies]
 mypy = "^1.8.0"
