--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,11 @@
 # SPDX-License-Identifier: MPL-2.0
 
 stages:
+  - sync
   - lint
+  - build
   - test
   - coverage
-  - build
   - release
   - deploy
   - docs
@@ -40,6 +41,7 @@ variables:
 include:
   - project: labs/salt-automation
     file:
+      - gitlab-ci-templates/common/no-interrupt-meta.v1.yml
       - gitlab-ci-templates/common/conventional-commits.v1.yml
       - gitlab-ci-templates/common/conventional-commits-changelog.v1.yml
       - gitlab-ci-templates/python/pytest.v1.yml
