--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -35,7 +35,7 @@ CONVERSION_MAPPING='
   "ldap_to_mo": {
     "Employee": {
       "objectClass": "ramodels.mo.employee.Employee",
-      "_import_to_mo_": "true",
+      "_import_to_mo_": "false",
       "cpr_no": "{{ ldap.employeeNumber|strip_non_digits or NONE }}",
       "uuid": "{{ employee_uuid or NONE }}",
       "givenname": "{{ get_employee_dict(employee_uuid).givenname }}",
@@ -44,9 +44,22 @@ CONVERSION_MAPPING='
       "nickname_surname": "{{ get_employee_dict(employee_uuid).nickname_surname }}",
       "user_key": "{{ ldap.title }}"
     },
+    "Engagement": {
+      "objectClass": "ramodels.mo.details.engagement.Engagement",
+      "_import_to_mo_": "false",
+      "validity": "{{ dict(from_date=now()|mo_datestring) }}",
+      "person": "{{ dict(uuid=employee_uuid or NONE) }}",
+      "user_key": "{{ get_primary_engagement_dict(employee_uuid).user_key }}",
+      "engagement_type": "{{ dict(uuid=get_primary_engagement_dict(employee_uuid).engagement_type_uuid) }}",
+      "org_unit": "{{ dict(uuid=get_primary_engagement_dict(employee_uuid).org_unit_uuid) }}",
+      "job_function": "{{ dict(uuid=get_primary_engagement_dict(employee_uuid).job_function_uuid) }}",
+      "primary": "{{ dict(uuid=get_primary_engagement_dict(employee_uuid).primary_uuid) }}",
+      "uuid": "{{ get_primary_engagement_dict(employee_uuid).uuid }}",
+      "extension_2": "{{ ldap.title }}"
+    },
     "ADtitle": {
       "objectClass": "ramodels.mo.details.it_system.ITUser",
-      "_import_to_mo_": "true",
+      "_import_to_mo_": "false",
       "user_key": "{{ ldap.title }}",
       "itsystem": "{{ dict(uuid=get_it_system_uuid(\'ADtitle\')) }}",
       "validity": "{{ dict(from_date=now()|mo_datestring) }}",
@@ -54,7 +67,7 @@ CONVERSION_MAPPING='
     },
     "ADUUID": {
       "objectClass": "ramodels.mo.details.it_system.ITUser",
-      "_import_to_mo_": "true",
+      "_import_to_mo_": "false",
       "_terminate_": "{{ now()|mo_datestring if ldap.title == \"WOW\" else NONE }}",
       "user_key": "{{ ldap.entryUUID }}",
       "itsystem": "{{ dict(uuid=get_it_system_uuid(\'ADUUID\')) }}",
@@ -68,6 +81,11 @@ CONVERSION_MAPPING='
       "_export_to_ldap_": "false",
       "employeeNumber": "{{ mo_employee.cpr_no }}",
       "title": "{{ mo_employee.user_key }}"
+    },
+    "Engagement": {
+      "objectClass": "inetOrgPerson",
+      "_export_to_ldap_": "true",
+      "title": "{{ mo_employee_engagement.job_function_uuid }}"
     },
     "ADtitle": {
       "objectClass": "inetOrgPerson",
