--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,14 @@ repos:
     rev: v3.12.0
     hooks:
       - id: reorder-python-imports
+        name: reorder-python-imports (code)
         language: system
+        args: [--replace-import, mo_ldap_import_export=]
+        files: mo_ldap_import_export/
+      - id: reorder-python-imports
+        name: reorder-python-imports (tests)
+        language: system
+        files: tests/
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.2.1
