chore: [#60126] rework entire logging setup

--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -9,6 +9,8 @@ LDAP_OU_FOR_NEW_USERS="ou=os2mo,o=magenta"
 LDAP_UNIQUE_ID_FIELD="entryUUID"
 LDAP_AUTH_METHOD="simple"
 
+DEVELOPMENT_MODE=True
+
 FASTRAMQPI__AMQP__URL="amqp://guest:guest@msg-broker"
 FASTRAMQPI__AUTH_SERVER="http://keycloak:8080/auth"
 FASTRAMQPI__MO_URL="http://mo:5000"
