--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ ariadne-codegen = "0.7.1"
 pytz = "^2024.1"
 respx = "^0.21.1"
 rich = "^13.7.1"
+pytest-randomly = "^3.15.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
