--- a/dev-environment/magenta-addev.env
+++ b/dev-environment/magenta-addev.env
@@ -1,9 +1,9 @@
 LDAP_CONTROLLERS='[{"host": "ad.addev.magentahosted.dk"}]'
 LDAP_DOMAIN="magenta.dk"
-LDAP_SEARCH_BASE="DC=ad,DC=addev"
-LDAP_OUS_TO_SEARCH_IN=["OU=Users,OU=ldap-tests,OU=OS2MO"]
-LDAP_OUS_TO_WRITE_TO=["OU=Users,OU=ldap-tests,OU=OS2MO"]
-LDAP_OU_FOR_NEW_USERS="OU=Users,OU=ldap-tests,OU=OS2MO"
+LDAP_SEARCH_BASE="OU=ldap-tests,OU=OS2MO,DC=ad,DC=addev"
+LDAP_OUS_TO_SEARCH_IN=["OU=Users"]
+LDAP_OUS_TO_WRITE_TO=["OU=Users"]
+LDAP_OU_FOR_NEW_USERS="OU=Users"
 LDAP_UNIQUE_ID_FIELD="objectGUID"
 
 LDAP_AUTH_METHOD="simple"
