--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -6,9 +6,6 @@ LDAP_SEARCH_BASE="o=magenta,dc=magenta,dc=dk"
 LDAP_OUS_TO_SEARCH_IN=["ou=os2mo"]
 LDAP_OUS_TO_WRITE_TO=["ou=os2mo"]
 LDAP_OU_FOR_NEW_USERS="ou=os2mo"
-LDAP_UNIQUE_ID_FIELD="entryUUID"
-LDAP_USERNAME_FIELD="uid"
-LDAP_UPN_FIELD="mail"
 LDAP_AUTH_METHOD="simple"
 
 PRODUCTION=False
@@ -86,7 +83,9 @@ CONVERSION_MAPPING='
       "objectClass": "inetOrgPerson",
       "_export_to_ldap_": "true",
       "entryUUID": "{{ mo_employee_it_user.uuid  }}",
-      "uid": "{{ mo_employee_it_user.user_key }}"    }
+      "uid": "{{ mo_employee_it_user.user_key }}",
+      "mail": "{{ mo_employee_it_user.user_key }}@magenta.dk"
+    }
   },
   "username_generator": {
     "objectClass": "UserNameGenerator",
