--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 # SPDX-FileCopyrightText: 2019-2020 Magenta ApS
 # SPDX-License-Identifier: MPL-2.0
-version: "3"
+
 services:
   ldap:
     container_name: ldap
@@ -28,6 +28,7 @@ services:
     environment:
       FASTRAMQPI__DAP: "true"
       TZ: "Europe/Copenhagen"
+      OPEN_LDAP_COMPATIBLE: "true"
     volumes:
       - ./mo_ldap_import_export:/opt/app/
       - ./dev-environment/mo_ldap_import_export.env:/var/run/.env
