chore: rename config variable and introduce option to set AD/ldap specific fields

--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -7,7 +7,7 @@ LDAP_OUS_TO_SEARCH_IN=["ou=os2mo"]
 LDAP_OUS_TO_WRITE_TO=["ou=os2mo"]
 LDAP_OU_FOR_NEW_USERS="ou=os2mo"
 LDAP_AUTH_METHOD="simple"
-
+OPENLDAP_COMPATIBLE="true"
 PRODUCTION=False
 
 FASTRAMQPI__AMQP__URL="amqp://guest:guest@msg-broker"
