refactor: [#60695] introduce CPRNumber type

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,7 @@ type = "datetime.datetime"
 [tool.ariadne-codegen.scalars.UUID]
 type = "uuid.UUID"
 [tool.ariadne-codegen.scalars.CPR]
-type = "str"
+type = "..types.CPRNumber"
 
 
 [tool.coverage.report]
