--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ pytest-cov = "^4.1.0"
 pytest-split = "^0.8.2"
 pytest-xdist = "^3.5.0"
 asgi-lifespan = "^2.1.0"
+freezegun = "^1.5.1"
 
 [tool.poetry.group.dev.dependencies]
 debugpy = "^1.8.1"
