feat: [#59702] convert from AMQP to HTTP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,27 @@ services:
 #    ports:
 #      - "389:389"
 
+  amqp2http:
+    image: magentaaps/amqp2http:1.0.0
+    command: ["uvicorn", "--factory", "app.main:create_app", "--host", "0.0.0.0", "--reload"]
+    environment:
+      FASTRAMQPI__AMQP__URL: "amqp://guest:guest@msg-broker"
+      FASTRAMQPI__AUTH_SERVER: "http://keycloak:8080/auth"
+      FASTRAMQPI__MO_URL: "http://mo:5000"
+
+      FASTRAMQPI__CLIENT_ID: "dipex"
+      FASTRAMQPI__CLIENT_SECRET: "603f1c82-d012-4d04-9382-dbe659c533fb"
+
+      FASTRAMQPI__AMQP__UPSTREAM_EXCHANGE: os2mo
+      FASTRAMQPI__AMQP__EXCHANGE: os2mo_ldap
+      FASTRAMQPI__AMQP__QUEUE_PREFIX: os2mo_ldap
+
+      NAME: "mo2ldap"
+      INTEGRATION_URL: "http://mo_ldap_ie:8000"
+      EVENT_MAPPING: '{"person": "/mo2ldap/person"}'
+    networks:
+      - os2mo_default
+
   mo_ldap_import_export:
     container_name: mo_ldap_ie
     build: .
