--- a/dev-environment/mo_ldap_import_export.env
+++ b/dev-environment/mo_ldap_import_export.env
@@ -86,7 +86,8 @@ CONVERSION_MAPPING='
     }
   },
   "username_generator": {
-    "objectClass": "UserNameGenerator"
+    "objectClass": "UserNameGenerator",
+    "combinations_to_try": ["FFFX", "LLLX"]
   }
 }
 '
