--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,62 @@ services:
     command: ["uvicorn", "--factory", "mo_ldap_import_export.main:create_app", "--host", "0.0.0.0", "--reload"]
     environment:
       FASTRAMQPI__DAP: "true"
-      TZ: "Europe/Copenhagen"
+
+      # Integration
+      LDAP_CONTROLLERS: '[{"host": "ldap"}]'
+      LDAP_DOMAIN: "magenta.dk"
+      LDAP_USER: "cn=admin,dc=magenta,dc=dk"
+      LDAP_PASSWORD: "AdminPassword123"
+      LDAP_SEARCH_BASE: "dc=magenta,dc=dk"
+      LDAP_OUS_TO_SEARCH_IN: '["ou=os2mo,o=magenta"]'
+      LDAP_OUS_TO_WRITE_TO: '[""]'
+      LDAP_OU_FOR_NEW_USERS: "ou=os2mo,o=magenta"
+      LDAP_DIALECT: "Standard"
+      LDAP_AUTH_METHOD: "simple"
+
+      PRODUCTION: 'False'
+
+      LISTEN_TO_CHANGES_IN_MO: 'True'
+      LISTEN_TO_CHANGES_IN_LDAP: 'True'
+
+      DEFAULT_ORG_UNIT_TYPE: "Afdeling"
+      DEFAULT_ORG_UNIT_LEVEL: "N1"
+
+      CONVERSION_MAPPING: >-
+        {
+            "ldap_to_mo": {
+                "Employee": {
+                    "objectClass": "ramodels.mo.employee.Employee",
+                    "_import_to_mo_": "false",
+                    "uuid": "{{ employee_uuid or NONE }}",
+                    "cpr_no": "{{ldap.employeeNumber|strip_non_digits or NONE}}",
+                    "user_key": "{{ ldap.title }}",
+                    "givenname": "{{ ldap.givenName }}",
+                    "surname": "{{ ldap.sn }}"
+                }
+            },
+            "mo_to_ldap": {
+                "Employee": {
+                    "objectClass": "inetOrgPerson",
+                    "_export_to_ldap_": "true",
+                    "employeeNumber": "{{mo_employee.cpr_no}}",
+                    "title": "{{ mo_employee.user_key }}",
+                    "givenName": "{{ mo_employee.givenname }}",
+                    "sn": "{{ mo_employee.surname }}"
+                }
+            },
+            "username_generator": {
+              "objectClass": "UserNameGenerator",
+              "combinations_to_try": ["FFFX", "LLLX"]
+            }
+        }
+
+      # OS2mo
+      FASTRAMQPI__AMQP__URL: "amqp://guest:guest@msg-broker"
+      FASTRAMQPI__AUTH_SERVER: "http://keycloak:8080/auth"
+      FASTRAMQPI__MO_URL: "http://mo:5000"
+      FASTRAMQPI__CLIENT_ID: "dipex"
+      FASTRAMQPI__CLIENT_SECRET: "603f1c82-d012-4d04-9382-dbe659c533fb"
 
       # Database
       FASTRAMQPI__DATABASE__USER: "fastramqpi"
@@ -37,7 +92,6 @@ services:
     volumes:
       - ./mo_ldap_import_export/:/app/mo_ldap_import_export:ro
       - ./tests/:/app/tests/:ro
-      - ./dev-environment/mo_ldap_import_export.env:/var/run/.env
     networks:
       - default
       - os2mo_default
