--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,6 @@ services:
 #    ports:
 #      - "389:389"
 
-
   mo-init:
     image: magentaaps/os2mo-init:5
     environment:
@@ -81,76 +80,67 @@ services:
 
       # Produced using: yq -o=json kolding_fixture.yaml
       # Followed by escaping the single quotes within templates
-      # Produced using: yq -o=json kolding_fixture.yaml
-      # Followed by escaping the single quotes within templates
-      CONVERSION_MAPPING: |
-        '
+
+      CONVERSION_MAPPING: >-
         {
-        "init": {
-          "it_systems": {
-            "ADUUID": "Active Directory UUID",
-            "ADtitle": "Active Directory Title"
-          }
-        },
-        "ldap_to_mo": {
-          "Employee": {
-            "objectClass": "ramodels.mo.employee.Employee",
-            "_import_to_mo_": "true",
-            "uuid": "{{ employee_uuid or NONE }}",
-            "nickname_givenname": "{{ get_employee_dict(employee_uuid).nickname_givenname }}",
-            "nickname_surname": "{{ get_employee_dict(employee_uuid).nickname_surname }}",
-            "cpr_no": "{{ ldap.employeeNumber|strip_non_digits or NONE }}",
-            "user_key": "{{ ldap.title }}",
-            "givenname": "{{ ldap.givenName }}",
-            "surname": "{{ ldap.sn }}"
-          },
-          "ADtitle": {
-            "objectClass": "ramodels.mo.details.it_system.ITUser",
-            "_import_to_mo_": "true",
-            "user_key": "{{ ldap.title }}",
-            "itsystem": "{{ dict(uuid=get_it_system_uuid(\'ADtitle\')) }}",
-            "validity": "{{ dict(from_date=now()|mo_datestring) }}",
-            "person": "{{ dict(uuid=employee_uuid or NONE) }}"
-          },
-          "ADUUID": {
-            "objectClass": "ramodels.mo.details.it_system.ITUser",
-            "_import_to_mo_": "true",
-            "_terminate_": "{{ now()|mo_datestring if ldap.title == \"WOW\" else NONE }}",
-            "user_key": "{{ ldap.entryUUID }}",
-            "itsystem": "{{ dict(uuid=get_it_system_uuid(\'ADUUID\')) }}",
-            "validity": "{{ dict(from_date=now()|mo_datestring) }}",
-            "person": "{{ dict(uuid=employee_uuid or NONE) }}"
-          }
-        },
-        "mo_to_ldap": {
-          "Employee": {
-            "objectClass": "inetOrgPerson",
-            "_export_to_ldap_": "false",
-            "employeeNumber": "{{ mo_employee.cpr_no }}",
-            "title": "{{ mo_employee.user_key }}",
-            "givenName": "{{ mo_employee.givenname }}",
-            "sn": "{{ mo_employee.surname }}"
-          },
-          "ADtitle": {
-            "objectClass": "inetOrgPerson",
-            "_export_to_ldap_": "false",
-            "title": "{{ mo_employee_it_user.user_key }}",
-            "employeeNumber": "{{ mo_employee.cpr_no }}"
-          },
-          "ADUUID": {
-            "objectClass": "inetOrgPerson",
-            "_export_to_ldap_": "false",
-            "title": "{{ NONE }}",
-            "entryUUID": "{{ mo_employee_it_user.user_key }}",
-            "employeeNumber": "{{ mo_employee.cpr_no }}"
-          }
-        },
-        "username_generator": {
-          "objectClass": "UserNameGenerator",
-          "combinations_to_try": ["FFFX", "LLLX"]
+            "ldap_to_mo": {
+                "Employee": {
+                    "objectClass": "ramodels.mo.employee.Employee",
+                    "_import_to_mo_": "false",
+                    "uuid": "{{ employee_uuid or NONE }}",
+                    "nickname_givenname": "{{ get_employee_dict(employee_uuid).nickname_givenname }}",
+                    "nickname_surname": "{{ get_employee_dict(employee_uuid).nickname_surname }}",
+                    "cpr_no": "{{ldap.employeeNumber|strip_non_digits or NONE}}",
+                    "user_key": "{{ ldap.title }}",
+                    "givenname": "{{ ldap.givenName }}",
+                    "surname": "{{ ldap.sn }}"
+                },
+                "ADtitle": {
+                    "objectClass": "ramodels.mo.details.it_system.ITUser",
+                    "_import_to_mo_": "true",
+                    "user_key": "{{ ldap.title }}",
+                    "itsystem": "{{ dict(uuid=get_it_system_uuid('ADtitle')) }}",
+                    "validity": "{{ dict(from_date=now()|mo_datestring) }}",
+                    "person": "{{ dict(uuid=employee_uuid or NONE) }}"
+                },
+                "ADUUID": {
+                    "objectClass": "ramodels.mo.details.it_system.ITUser",
+                    "_import_to_mo_": "true",
+                    "_terminate_": "{{ now()|mo_datestring if ldap.title == \"WOW\" else NONE }}",
+                    "user_key": "{{ ldap.entryUUID }}",
+                    "itsystem": "{{ dict(uuid=get_it_system_uuid('ADUUID')) }}",
+                    "validity": "{{ dict(from_date=now()|mo_datestring) }}",
+                    "person": "{{ dict(uuid=employee_uuid or NONE) }}"
+                }
+            },
+            "mo_to_ldap": {
+                "Employee": {
+                    "objectClass": "inetOrgPerson",
+                    "_export_to_ldap_": "true",
+                    "employeeNumber": "{{mo_employee.cpr_no}}",
+                    "title": "{{ mo_employee.user_key }}",
+                    "givenName": "{{ mo_employee.givenname }}",
+                    "sn": "{{ mo_employee.surname }}"
+                },
+                "ADtitle": {
+                    "objectClass": "inetOrgPerson",
+                    "_export_to_ldap_": "false",
+                    "title": "{{ mo_employee_it_user.user_key }}",
+                    "employeeNumber": "{{ mo_employee.cpr_no }}"
+                },
+                "ADUUID": {
+                    "objectClass": "inetOrgPerson",
+                    "_export_to_ldap_": "false",
+                    "title": "{{ NONE }}",
+                    "entryUUID": "{{ mo_employee_it_user.user_key }}",
+                    "employeeNumber": "{{ mo_employee.cpr_no }}"
+                }
+            },
+            "username_generator": {
+                "objectClass": "UserNameGenerator",
+                "combinations_to_try": ["FFFX", "LLLX"]
+            }
         }
-        }
-        '
 
     volumes:
       - ./mo_ldap_import_export/:/app/mo_ldap_import_export:ro
