chore(dev): [#59372] add flake8-simplify to ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,12 @@ DEP002 = [
 ]
 
 [tool.ruff.lint]
-extend-select = ["I"]
+extend-select = [
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I"
+]
 
 [tool.ruff.lint.isort]
 force-single-line = true
